--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="page-icon.png">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-yellow.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="src/css/main.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
     <script defer src="dist/bundle.js"></script>
